# fprime-rtems-poc

./: .clangd  .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: renode_rtems_leon3.yml
App/: App.cmake  CMakeLists.txt  Main.cpp  settings.ini
App/ComponentA/: CMakeLists.txt  ComponentA.cpp  ComponentA.fpp  ComponentA.hpp
App/ComponentB/: CMakeLists.txt  ComponentB.cpp  ComponentB.fpp  ComponentB.hpp
App/ComponentC/: CMakeLists.txt  ComponentC.cpp  ComponentC.fpp  ComponentC.hpp
App/Ports/: Ports.fpp
App/Top/: App.cpp  App.hpp  AppTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
App/config/: FpConfig.hpp
fprime-leon3/Types/: PlatformTypes.hpp
fprime-rtems/: CMakeLists.txt  fprime-rtems.cmake
fprime-rtems/cmake/platform/: RTEMS.cmake
fprime-rtems/cmake/platform/Support/: leon3.cmake
fprime-rtems/cmake/toolchain/: leon3-rtems5.cmake
fprime-rtems/rtems/: CMakeLists.txt  Mutex.cpp  Queue.cpp  Task.cpp  TaskId.cpp
swil/: build-prom.sh  build-rtems.sh  entrypoint.sh  leon3_rtems.resc  leon3_rtems_fprime.robot  test.sh
